--- a/src/index.css
+++ b/src/index.css
@@ -8,5 +8,12 @@
   --color-blue: #4E80EE;
   --color-yellow: #F6C768;
   --color-darkblue: #20293A;
-  --color-darkblue-opf2: #2029
+  --color-darkblue-opf2: #2029;
+
+  --font-display: 'Outfit', sans-serif;
+}
+
+@font-face {
+  font-family: 'Outfit';
+  src: url('./outfit/OutfitVariableFont_wght1.ttf');
 }
